color generator complete

--- a/index.html
+++ b/index.html
@@ -12,10 +12,8 @@
                 <button class="Gbtn btn">Generate</button>
                 <button class="Cbtn btn">Copy Color</button>
             </div>
-            <input type="text" class="colorCode" disabled >
-            <div class="colorBox">
-
-            </div>
+            <input type="text" class="colorCode" disabled />
+            <div class="colorBox"></div>
         </div>
 
         <script src="js/main.js"></script>
