--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <button class="Gbtn btn">Generate</button>
                 <button class="Cbtn btn">Copy Color</button>
             </div>
-            <input type="text" class="colorCode" disabled />
+            <input type="text" placeholder="000" class="colorCode" disabled />
             <div class="colorBox"></div>
         </div>
 
