item list maker

--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
     <body>
         <div class="boxItem">
             <div class="btn__box">
-                <button class="Gbtn btn">Generate</button>
-                <button class="Cbtn btn">Copy Color</button>
+                <button class="addBtn btn">ADD</button>
+                <button class="removeBtn btn">REMOVE </button>
             </div>
-            <input type="text" placeholder="000" class="colorCode" disabled />
-            <div class="colorBox"></div>
+            <input type="text" placeholder="" class="listInput"  />
+            <div class="colorBox">
+                <ul>
+                </ul>
+            </div>
         </div>
 
         <script src="js/main.js"></script>
