--- a/index.html
+++ b/index.html
@@ -9,14 +9,11 @@
     <body>
         <div class="boxItem">
             <div class="btn__box">
-                <button class="addBtn btn">ADD</button>
-                <button class="removeBtn btn">REMOVE </button>
+                <button class="Gbtn btn">Generate</button>
+                <button class="Cbtn btn">Copy Color</button>
             </div>
-            <input type="text" placeholder="" class="listInput"  />
-            <div class="colorBox">
-                <ul>
-                </ul>
-            </div>
+            <input type="text" placeholder="000" class="colorCode" disabled />
+            <div class="colorBox"></div>
         </div>
 
         <script src="js/main.js"></script>
